TFP-4570 stringkode til enum fase1 (#3133)
* TFP-4570 stringkode til enum fase1

* Tilpasning av forvaltning